--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: default
 title: 西大贝的烂笔头 
 ---
-
-<h2>{{ page.title }}</h2>
-<p>最新文章</p>
-<ul>
-    {% for post in site.posts %}
-        <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+<div id="home">
+	<h1>Blog文章</h1>
+	<ul class="posts">
+		{% for post in site.posts %}
+		<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-<ul>
+	</ul>
+</div>
