--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: 西大贝的烂笔头
 	<h1>Blog文章</h1>
 	<ul class="posts">
 		{% for post in site.posts %}
-		<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 	</ul>
 </div>
